force-app/main/default/objects/Case_Label__c/Case_Label__c.object-meta.xml
<CustomObject>
    <description>Junction object for Case Management and Labels</description>
    <label>Case Label Role</label>
    <nameField>
        <displayFormat>CL-{0}</displayFormat>
        <label>Case Label Role ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Label Roles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>