force-app/main/default/objects/Case_Label__c/fields/Conference_Code__c.field-meta.xml
<CustomField>
    <fullName>Conference_Code__c</fullName>
    <label>Conference Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>