force-app/main/default/objects/Case_Label__c/fields/Deadline_Communication__c.field-meta.xml
<CustomField>
    <fullName>Deadline_Communication__c</fullName>
    <inlineHelpText>How was deadline overtime communicated with the claimant?</inlineHelpText>
    <label>Deadline Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>