force-app/main/default/objects/Case_Label__c/fields/Know_address_of_garment_delivery__c.field-meta.xml
<CustomField>
    <fullName>Know_address_of_garment_delivery__c</fullName>
    <label>Know address of garment delivery</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>