force-app/main/default/objects/Case_Label__c/fields/Label_Association__c.field-meta.xml
<CustomField>
    <fullName>Label_Association__c</fullName>
    <inlineHelpText>How do you know they were associated with this label?</inlineHelpText>
    <label>Label Association</label>
    <length>255</length>
    <type>Text</type>
</CustomField>