force-app/main/default/objects/Case_Label__c/fields/Label_Priority__c.field-meta.xml
<CustomField>
    <fullName>Label_Priority__c</fullName>
    <inlineHelpText>Was claimant instructed to give this label priority?</inlineHelpText>
    <label>Label Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>