force-app/main/default/objects/Case_Label__c/fields/Label_Priority_Communication__c.field-meta.xml
<CustomField>
    <fullName>Label_Priority_Communication__c</fullName>
    <inlineHelpText>How was label priority communicated to the claimant?</inlineHelpText>
    <label>Label Priority Communication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>