force-app/main/default/objects/Case_Label__c/fields/Label_Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Label_Provider_Account_Name__c</fullName>
    <description>Populates with the account name from the "Label Provider" lookup to Case Role.</description>
    <formula>Case_Role__r.Account_Name__c</formula>
    <label>Label Provider Account Name</label>
    <type>Text</type>
</CustomField>