force-app/main/default/objects/Case_Label__c/fields/Label_Time__c.field-meta.xml
<CustomField>
    <fullName>Label_Time__c</fullName>
    <label>Label Time</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>