force-app/main/default/objects/Case_Label__c/fields/ODA_Code__c.field-meta.xml
<CustomField>
    <fullName>ODA_Code__c</fullName>
    <label>ODA Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>