force-app/main/default/objects/Case_Label__c/fields/Persons_Name__c.field-meta.xml
<CustomField>
    <fullName>Persons_Name__c</fullName>
    <label>Persons Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>