force-app/main/default/objects/Case_Label__c/fields/Sample_garments__c.field-meta.xml
<CustomField>
    <fullName>Sample_garments__c</fullName>
    <label>Sample garments</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>