force-app/main/default/objects/Case_Label__c/validationRules/Inactive_Reason_Status_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>Inactive_Reason_Status_Inactive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 TEXT(Status__c) = 'Inactive',
 LEN( Inactive_Reason__c ) = 0
)</errorConditionFormula>
    <errorMessage>If Status = Inactive, you must enter the reason into the Inactive Reason field.</errorMessage>
</ValidationRule>